# package-c

./: README.md  pyproject.toml  requirements.txt
src/pkg_c/: stats.py
tests/: test_stats.py
